--- a/index.html
+++ b/index.html
@@ -3,21 +3,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cantinho da bisa - Home</title>
+    <title>Cantinho da bisa - Início</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="images/icone.png" type="image/x-icon">
 </head>
 <body>
     <header>
         <nav>
             <span>
-                <a href="#">
+                <a href="index.html">
                     <img src="images/icone.png" alt="">
                 </a>
             </span>
-            <span><a href="#">Início</a></span>
+            <span><a href="index.html">Início</a></span>
             <span><a href="#">Menu</a></span>
             <span><a href="#">Contato</a></span>
         </nav>
     </header>
+
+    <main>
+        <section>
+
+        </section>
+        
+        <section>
+        
+        </section>
+    </main>
 </body>
 </html>
