--- a/index.html
+++ b/index.html
@@ -22,12 +22,15 @@
     </header>
 
     <main>
-        <section>
+        <section class="copy">
+            <div>
+                <h1>Festas, <br>Bares e <br> Momentos especiais</h1>
+            </div>
 
+            <p>É aquela que te conquista na primeira mordida,<br> com gostinho de feito em casa</p>
         </section>
-        
-        <section>
-        
+
+        <section class="img-chamativa">
         </section>
     </main>
 </body>
