--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <main>
         <section class="copy">
             <div>
-                <h1>Festas, <br>Bares e <br> Momentos especiais</h1>
+                <h1><span id="festas-style">Festas</span>, <br><span id="bares-style">Bares</span> e <br> <span id="momentos-style">Momentos especiais</span></h1>
             </div>
 
-            <p>É aquela que te conquista na primeira mordida,<br> com gostinho de feito em casa</p>
+            <p id="paragrafo-copy">É aquela que te conquista na primeira mordida,<br> com gostinho de feito em casa</p>
         </section>
 
         <section class="img-chamativa">
