--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         <nav>
             <span>
                 <a href="index.html">
-                    <img src="images/icone.png" alt="">
+                    <img src="images/icone.png" alt="Logo Cantinho da Bisa">
                 </a>
             </span>
             <span><a href="index.html">Início</a></span>
-            <span><a href="#">Menu</a></span>
+            <span><a href="menu.html" rel="next" target="_self">Menu</a></span>
             <span><a href="#">Contato</a></span>
         </nav>
     </header>
